Shift+T kill Blender in specific scene #34620

Closed
opened 2013-03-13 05:14:53 +01:00 by Andrey M · 5 comments

%%%--- Operating System, Graphics card ---
Linux Mint 14 x64, GXT570 nv313.26, Phenom2x6 1090T 8GB RAM

- Blender version with error  ---

crashed: 2.66.1(r55218) , 2.65.9(r54054), 2.63.0

- Short description of error ---

pressing Shift+T crash blender if some existing mesh selected on attached scene
crash.txt attached also

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

open file glider4.blend and press Shift+T on keyboard

%%%

%%%--- Operating System, Graphics card --- Linux Mint 14 x64, GXT570 nv313.26, Phenom2x6 1090T 8GB RAM - Blender version with error --- crashed: 2.66.1(r55218) , 2.65.9(r54054), 2.63.0 - Short description of error --- pressing Shift+T crash blender if some existing mesh selected on attached scene crash.txt attached also - Steps for others to reproduce the error (preferably based on attached .blend file) --- open file glider4.blend and press Shift+T on keyboard %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%oops! it's says file too big :(
grab it here http://www.pasteall.org/blend/20067 %%%

%%%oops! it's says file too big :( grab it here http://www.pasteall.org/blend/20067 %%%
Member

%%%Will check it asap.%%%

%%%Will check it asap.%%%
Member

%%%Thanks for finding it, an exception not handled correctly in the code. Fix is in svn now!%%%

%%%Thanks for finding it, an exception not handled correctly in the code. Fix is in svn now!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34620
No description provided.