Bug fix #34620

SHIFT+T (texture space transform) crashed in editmode. Not checking NULL pointer.